--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -17,11 +17,11 @@
         app:srcCompat="@drawable/mobile_auth" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/otp_phoneView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Verify your Phone Number"
+        android:layout_marginTop="10dp"
+        android:text="Verify: your Phone Number"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -32,11 +32,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="22dp"
         android:layout_marginEnd="16dp"
         app:cardCornerRadius="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
@@ -50,14 +49,13 @@
                 android:id="@+id/otp_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
                 android:layout_gravity="center"
+                android:inputType="number"
                 android:itemBackground="@color/grey"
                 android:textColor="@android:color/white"
                 app:OtpItemCount="6"
                 app:OtpLineColor="@color/white"
-                app:OtpViewType="line"
-                />
+                app:OtpViewType="line" />
 
             <Button
                 android:id="@+id/buttonContinue"
@@ -73,13 +71,11 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="6dp"
         android:gravity="center"
         android:text="Please enter the code "
         android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="@+id/otp_phoneView"
+        app:layout_constraintStart_toStartOf="@+id/otp_phoneView"
+        app:layout_constraintTop_toBottomOf="@+id/otp_phoneView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
