--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -53,7 +53,7 @@
                 android:background="@drawable/textbox"
                 android:ems="10"
                 android:hint="Phone No."
-                android:inputType="textPersonName"
+                android:inputType="phone"
                 android:padding="8dp" />
 
             <Button
