--- a/app/src/main/res/layout/activity_user_profiles.xml
+++ b/app/src/main/res/layout/activity_user_profiles.xml
@@ -4,38 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OtpActivity">
+    tools:context=".UserProfilesActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="51dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mobile_auth" />
+        android:src="@drawable/avatar"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"/>
+
 
     <TextView
-        android:id="@+id/otp_phoneView"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Verify: your Phone Number"
+        android:layout_marginTop="16dp"
+        android:text="Profile Info"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintEnd_toEndOf="@+id/profile_image"
+        app:layout_constraintStart_toStartOf="@+id/profile_image"
+        app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="17dp"
         android:layout_marginEnd="16dp"
         app:cardCornerRadius="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
@@ -45,25 +50,23 @@
             android:layout_margin="10sp"
             android:orientation="vertical">
 
-            <com.mukesh.OtpView
-                android:id="@+id/otp_view"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/nameBox"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:inputType="number"
-                android:itemBackground="@color/grey"
-                android:textColor="@android:color/black"
-                app:OtpItemCount="6"
-                app:OtpLineColor="@color/teal_700"
-                app:OtpViewType="line" />
+                android:background="@drawable/textbox"
+                android:ems="10"
+                android:hint="Enter your Name:"
+                android:inputType="textPersonName"
+                android:padding="8dp" />
 
             <Button
-                android:id="@+id/buttonContinue"
+                android:id="@+id/buttonSetup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10sp"
                 android:backgroundTint="@color/teal_700"
-                android:text="Continue" />
+                android:text="Setup Profile" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -71,11 +74,13 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="16dp"
         android:gravity="center"
-        android:text="Please enter the code "
+        android:text="Enter your credentials"
         android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="@+id/otp_phoneView"
-        app:layout_constraintStart_toStartOf="@+id/otp_phoneView"
-        app:layout_constraintTop_toBottomOf="@+id/otp_phoneView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
